Added Services section to project 01

--- a/project_01/sources/index.html
+++ b/project_01/sources/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="wrapper">
+	<!-- Header -->
 	<header class="header-container">
 		<div class="logo">
 			<span class="logo-first">Company</span>
@@ -23,6 +24,7 @@
 			<a href="#" class="nav-item">Contact</a>
 		</nav>
 	</header>
+
 	<!-- Banner -->
 	<div class="banner">
 		<p class="banner-title">
@@ -34,6 +36,47 @@
 		</p>
 		<a href="#" class="button">Button name</a>
 	</div>
+
+	<!-- Services -->
+	<div class="services">
+		<h2 class="services__title">
+			Lorem Ipsum is simply dummy text of the printing
+		</h2>
+		<div class="services__item">
+			<div class="services-item__image-container">
+				<img class="services-item__image" src="i/services_lock.png" alt="">
+			</div>
+			<h3 class="services-item__title">
+				Protect
+			</h3>
+			<p class="services-item__text">
+				100% of customer funds are stored offline in secure cold storage. We offer two­ factor authentication on all accounts, mobile alerts and delayed withdrawals, and spending and transfer limits.
+			</p>
+		</div>
+		<div class="services__item">
+			<div class="services-item__image-container">
+				<img class="services-item__image" src="i/services_flash.png" alt="">
+			</div>
+			<h3 class="services-item__title">
+				Alert
+			</h3>
+			<p class="services-item__text">
+				100% of customer funds are stored offline in secure cold storage. We offer two­ factor authentication on all accounts, mobile alerts and delayed withdrawals, and spending and transfer limits.
+			</p>
+		</div>
+		<div class="services__item">
+			<div class="services-item__image-container">
+				<img class="services-item__image" src="i/services_phone.png" alt="">
+			</div>
+			<h3 class="services-item__title">
+				Detect
+			</h3>
+			<p class="services-item__text">
+				100% of customer funds are stored offline in secure cold storage. We offer two­ factor authentication on all accounts, mobile alerts and delayed withdrawals, and spending and transfer limits.
+			</p>
+		</div>
+	</div>
+
 	<!-- Pricing -->
 	<div class="pricing-container">
 		<h2 class="pricing-container-title">We have a very flexible offers for you to choose</h2>
