Added content section to project 01

--- a/project_01/sources/index.html
+++ b/project_01/sources/index.html
@@ -77,6 +77,29 @@
 		</div>
 	</div>
 
+	<!-- Content -->
+	<div class="content-container">
+		<div class="content">
+			<h2 class="content__title">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been....
+			</h2>
+			<h3 class="content__sub-title">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+			</h3>
+			<ul class="content__list">
+				<li class="content__list-item">
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+				</li>
+				<li class="content__list-item">
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+				</li>
+				<li class="content__list-item">
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+				</li>
+			</ul>
+		</div>
+	</div>
+
 	<!-- Pricing -->
 	<div class="pricing-container">
 		<h2 class="pricing-container-title">We have a very flexible offers for you to choose</h2>
