Added contacts block to project 01

--- a/project_01/sources/index.html
+++ b/project_01/sources/index.html
@@ -231,6 +231,41 @@
 				</div>
 			</div>
 	</div>
+
+	<!-- Contacts -->
+	<div class="contacts">
+		<div class="contacts__item">
+			<address class="contacts__address">
+				<p class="contacts__location">
+					Iconic Graphics<br>
+					123 Main Street<br>
+					EastWest<br>				
+					LHR 54500
+				</p>			
+				<a class="contacts__link contacts__phone" href="tel:0123456789">012.345.6789</a>
+				<a class="contacts__link contacts__email" href="mailto:info@iconicgraphics.com">info@iconicgraphics.com</a>
+			</address>
+			<div class="contacts__social">
+				<a href="#"><img class="contacts__social-image" src="i/facebook.png"/></a>
+				<a href="#"><img class="contacts__social-image" src="i/twiter.png"/></a>
+				<a href="#"><img class="contacts__social-image" src="i/linkedin.png"/></a>
+			</div>
+		</div><div class="contacts__item"><img class="contacts__map-image" src="i/map.png" alt="Map">
+		</div>
+	</div>
+
+	<!-- Footer -->
+	<footer class="footer-container">
+		<div class="footer">
+			<p class="footer__text">
+				Copyright (c) 2016 <span class="company">Company Name</span>. All rights reserved.
+			</p>
+			<p>
+				Designed by <a class="footer__link" href="#">IconicGraphics.com</a>
+			</p class="footer__text">
+		</div>
+	</footer>
+
 </div>
 
 </body>
