Added features section; moved all scss variables to separate file

--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -96,9 +96,60 @@
 			</div>
 		</div>
 	</section>
-
 </header>
 
+<!-- FEATURES -->
+<section class="features content content_full">
+	<div class="content">
+		<h2 class="content__title">
+			summarise the features
+		</h2>
+		<h3 class="content__description">
+			summarise what your product is all about
+		</h3>
+		<div class="feature">
+			<div class="feature__icon">
+				<img class="feature__img" src="i/features_layout.png">
+			</div>
+			<h4 class="feature__title">
+				Attractive Layout
+			</h4>
+			<p class="feature__description">
+				Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+			</p>
+		</div><div class="feature">
+			<div class="feature__icon">
+				<img class="feature__img" src="i/features_design.png">
+			</div>
+			<h4 class="feature__title">
+				Fresh Design
+			</h4>
+			<p class="feature__description">
+				Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+			</p>
+		</div><div class="feature">
+			<div class="feature__icon">
+				<img class="feature__img" src="i/features_purpose.png">
+			</div>
+			<h4 class="feature__title">
+				multipurpose
+			</h4>
+			<p class="feature__description">
+				Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+			</p>
+		</div><div class="feature">
+			<div class="feature__icon">
+				<img class="feature__img" src="i/features_customize.png">
+			</div>
+			<h4 class="feature__title">
+				Easy to customize
+			</h4>
+			<p class="feature__description">
+				Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+			</p>
+		</div>
+	</div>
+</section>
 
 </body>
 </html>
