Added gallery section

--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -151,5 +151,72 @@
 	</div>
 </section>
 
+<!-- GALLERY -->
+<section class="gallery content content_full">
+	<div class="content">
+		<h2 class="content__title">
+			show the gallery
+		</h2>
+		<h3 class="content__description">
+			summarise what your product is all about
+		</h3>
+		<div class="fotos">
+			<div class="foto">
+				<div class="preview">
+					<img class="preview__img" src="i/gallery.png">
+					<div class="preview__zoom">
+						<i class="fa fa-plus" aria-hidden="true"></i>
+					</div>
+					<div class="preview__title">
+						SCREEN SHOT #1
+					</div>
+				</div>
+				<p class="foto__description">
+					Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+				</p>
+			</div><div class="foto">
+				<div class="preview">
+					<img class="preview__img" src="i/gallery.png">
+					<div class="preview__zoom">
+						<i class="fa fa-plus" aria-hidden="true"></i>
+					</div>
+					<div class="preview__title">
+						SCREEN SHOT #2
+					</div>
+				</div>
+				<p class="foto__description">
+					Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+				</p>
+			</div><div class="foto">
+				<div class="preview">
+					<img class="preview__img" src="i/gallery.png">
+					<div class="preview__zoom">
+						<i class="fa fa-plus" aria-hidden="true"></i>
+					</div>
+					<div class="preview__title">
+						SCREEN SHOT #3
+					</div>
+				</div>
+				<p class="foto__description">
+					Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+				</p>
+			</div><div class="foto">
+				<div class="preview">
+					<img class="preview__img" src="i/gallery.png">
+					<div class="preview__zoom">
+						<i class="fa fa-plus" aria-hidden="true"></i>
+					</div>
+					<div class="preview__title">
+						SCREEN SHOT #4
+					</div>
+				</div>
+				<p class="foto__description">
+					Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massa idporta nequetiam elerisque mi id faucibus iaculis vitae pulvinar.
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 </body>
 </html>
