Added video section

--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -218,5 +218,20 @@
 	</div>
 </section>
 
+<!-- VIDEO -->
+<section class="video content content_full">
+	<div class="content">
+		<div class="video__play">
+			<i class="fa fa-play" aria-hidden="true"></i>
+		</div>
+		<h2 class="video__title">
+			Watch the best Technology in <span class="video__title-strong">Action</span>
+		</h2>
+		<p class="video__description">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget nunc vitae tellus luctus ullamcorper. Nam porttitor ullamcorper felis at convallis. Aenean ornare vestibulum nisi fringilla lacinia. Nullam pulvinar sollicitudin velit id laoreet. Quisque non rhoncus sem.
+		</p>
+	</div>
+</section>
+
 </body>
 </html>
