Added prices section

--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -233,5 +233,62 @@
 	</div>
 </section>
 
+<!-- PRICES -->
+<section class="prices content content_full">
+	<div class="content">
+		<h2 class="content__title">
+			choose your price
+		</h2>
+		<h3 class="content__description">
+			summarise what your product is all about
+		</h3>
+		<div class="prices__container">
+			<div class="price price_green">
+				<h4 class="price__title">
+					basic package
+				</h4>
+				<p class="price__sum">
+					20$
+				</p>
+				<ul class="price__fetures">
+					<li class="price__feture">Nullam suscipit vitae</li>
+					<li class="price__feture">Etiam faucibus</li>
+					<li class="price__feture">Vivamus viverra</li>
+				</ul>
+				<button class="price__action">PURCHASE</button>
+			</div>
+			<div class="price price_blue price_big">
+				<h4 class="price__title">
+					professional package
+				</h4>
+				<p class="price__sum">
+					25$
+				</p>
+				<ul class="price__fetures">
+					<li class="price__feture">Nullam suscipit vitae</li>
+					<li class="price__feture">Etiam faucibus</li>
+					<li class="price__feture">Vivamus viverra</li>
+					<li class="price__feture">Praesent pharetra</li>
+				</ul>
+				<button class="price__action">PURCHASE</button>
+			</div>
+			<div class="price price_orange">
+				<h4 class="price__title">
+					Advanced package
+				</h4>
+				<p class="price__sum">
+					30$
+				</p>
+				<ul class="price__fetures">
+					<li class="price__feture">Nullam suscipit vitae</li>
+					<li class="price__feture">Etiam faucibus</li>
+					<li class="price__feture">Vivamus viverra</li>
+				</ul>
+				<button class="price__action">PURCHASE</button>
+			</div>
+		</div>
+	</div>
+</section>
+
 </body>
 </html>
