Added testimonials section

--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -290,5 +290,37 @@
 	</div>
 </section>
 
+<!-- TESTIMONIALS -->
+<section class="testimonials content content_full">
+	<h2 class="content__title">
+		testimonials
+	</h2>
+	<div class="content">
+		<div class="testimonials__container">
+			<div class="testimonial">
+				<div class="testimonial__foto">
+					<img class="testimonial__img" src="i/testimonial_icon.png" alt="">
+				</div>
+				<div class="testimonial__description">
+					<p class="testimonial__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lobortis lectus eget libero blandit venenatis. In blandit tortor vel congue malesuada. Suspendisse molestie lobortis lorem dignissim pretium.
+					</p>
+					<p class="testimonial__author">
+						John Doe
+					</p>
+					<p class="testimonial__author">
+						from some company
+					</p>
+				</div>
+			</div>
+			<div class="testimonials__nav">
+				<div class="testimonials__nav-item testimonials__nav-item_active"></div>
+				<div class="testimonials__nav-item"></div>
+				<div class="testimonials__nav-item"></div>
+			</div>
+		</div>
+	</div>
+</section>
+
 </body>
 </html>
