Added download section

--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -322,5 +322,17 @@
 	</div>
 </section>
 
+<!-- DOWNLOAD -->
+<section class="download content content_full">
+	<div class="content">
+		<h2 class="download__title">
+			Do you Like this app?
+		</h2>
+		<button class="download__button">
+			download now
+		</button>
+	</div>
+</section>
+
 </body>
 </html>
