Added contact section

--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -334,5 +334,21 @@
 	</div>
 </section>
 
+<!-- CONTACT -->
+<section class="contact content content_full">
+	<div class="content">
+		<form class="contact__container">
+			<h4 class="contact__title">
+				Contact
+			</h4>
+			<input class="contact__input" type="text" placeholder="Your name"/>
+			<input class="contact__input" type="email" placeholder="Yout email"/>
+			<input class="contact__input" type="text" placeholder="Subject"/>
+			<textarea class="contact__textarea" placeholder="Message"></textarea>
+			<input class="contact__button" type="submit" value="Send"/>
+		</form>
+	</div>
+</section>
+
 </body>
 </html>
