--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -350,5 +350,22 @@
 	</div>
 </section>
 
+<!-- FOOTER -->
+<footer class="footer content content_full">
+	<div class="content">
+		<p class="footer__copyright">
+			Copyright © 2013 | <span class="footer__copyright_strong">bazinger</span> | All Rights Reserved
+		</p>
+		<div class="footer__links">
+			<a class="footer__link" href="#">
+				Terms of Service
+			</a> | 
+			<a class="footer__link" href="#">
+				Privacy Policy
+			</a>
+		</div>
+	</div>
+</footer>
+
 </body>
 </html>
