--- a/advanced/sources/index.html
+++ b/advanced/sources/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"/>
 	<title>Advanced</title>
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700|Lato:300,400,700,700i,900" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
